Ingress/ingress-nginx /apps/01-deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  namespace: lab-apps
  labels:
    app: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
        - name: giropops-senhas
          image: linuxtips/giropops-senhas:1.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: lab-apps
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  namespace: lab-apps
  labels:
    app: nginx-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:plain-text
          ports:
            - containerPort: 80
