Ingress/ingress-nginx /apps/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  namespace: lab-apps
spec:
  selector:
    app: giropops-senhas
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lab-apps
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: lab-apps
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
